# kktoken-client

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
cmake/: BuildFlags.cmake  TestSolution.cmake
contrib/catch/: catch.hpp
kktoken-client/: CMakeLists.txt  main.cpp
kktoken-client/communication/: CMakeLists.txt  Receiver.h
kktoken-client/core/: Application.cpp  Application.h  CMakeLists.txt  Service.h
kktoken-client/data-objects/: CMakeLists.txt  TokensAmount.cpp  Transaction.h  User.cpp
kktoken-client/interface/console/: CMakeLists.txt  Renderer.h
kktoken-client/networking/: CMakeLists.txt  stun.h
kktoken-client/serialization/: Serializable.h  Serializer.h
kktoken-client/structs/: CMakeLists.txt  TokensAmount.h  Transaction.cpp  User.h
kktoken-client/utils/: Logger.h
scratch-files/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/communication/: CMakeLists.txt  Sender.h
src/config/: constants.cpp  constants.h
src/core/: Application.cpp  Application.h  Service.h
src/crypto/: CMakeLists.txt  Cryptography.h
src/data_structures/Signature/: Signature.cpp  Signature.h
src/data_structures/TokensAmount/: TokensAmount.cpp  TokensAmount.h
src/interface/: CMakeLists.txt
src/interface/console/: Controller.h  Renderer.h
src/interface/log/: CMakeLists.txt  Logger.h  Record.h
src/serialization/: CMakeLists.txt
src/structs/: CMakeLists.txt  Structures.h
src/utils/: CMakeLists.txt  stun.h
tests/: CMakeLists.txt  data_structures.cpp  stun.cpp  test1.cpp
tests/data-objects/: CMakeLists.txt  Test-TokensAmount.cpp
tests/networking/: CMakeLists.txt  Test-stun.cpp
tools/: build.sh  get-dependencies.sh  link-compile-commands.sh  setup.sh
